[fix] Fix toolbar creeping up on content on mobile

--- a/app/templates/bmc/css/group.less
+++ b/app/templates/bmc/css/group.less
@@ -451,6 +451,10 @@ a.btn:active,
 a.bth:visited {
 	font-family: @fontGeometric;
 }
+
+.group-page-toolbar {
+	bottom: auto;
+}
 /* END: Supergroup template fixes */
 
 // Powered by color wheel animation
